syntax = "proto3";

package customer;

import "commons.proto";
import "user.proto";

message Customer {
  string id = 1;
  int32 userId = 2;
  string fullName = 3;
  string email = 4;
  string password = 5;
  string contact = 6;
  string level = 7;
  string status = 8;
  string role = 9;
  string gender = 10;
  int32 branchId = 11;
  string createdAt = 12;
  string updatedAt = 13;
  optional int32 dobDay = 14;
  optional int32 dobMonth = 15;
  optional int32 dobYear = 16;
  optional string occupation = 17;
  optional string avatar = 18;
  optional string referrer = 19;
  optional string referrerCode = 20;
  optional string customerCode = 21;
  optional string facebook = 22;
  optional string zaloPhone = 23;
  optional int32 height = 24;
  optional int32 weight = 25;
  optional string memberCardNo = 26;
  optional string address = 27;
  optional int32 cityCode = 28;
  optional int32 districtCode = 29;
  optional string company = 30;
  optional string taxNo = 31;
  optional string note = 32;
  optional string relatedUser = 33;
  optional string relatedUserRole = 34;
  optional string relatedUserPhone = 35;
  optional int32 customerId = 36;
}

message CustomerInput {
  string level = 1;
  int32 branchId = 2;
  optional string referrer = 3;
  optional string referrerCode = 4;
  optional string customerCode = 5;
  optional string facebook = 6;
  optional string zaloPhone = 7;
  optional int32 height = 8;
  optional int32 weight = 9;
  optional string memberCardNo = 10;
  optional string company = 11;
  optional string taxNo = 12;
  optional string note = 13;
  optional string relatedUser = 14;
  optional string relatedUserRole = 15;
  optional string relatedUserPhone = 16;
}

message CreateCustomerInput {
  user.CreateUserInput userInput = 1;
  CustomerInput customerInput = 2;
}

message UpdateCustomerInput {
  int32 id = 1;
  CreateCustomerInput data = 2;
}

message CustomerEdge {
  Customer node = 1;
  string cursor = 2;
}

message FindCustomersPayload {
  repeated CustomerEdge edges = 1;
  commons.PageInfo pageInfo = 2;
}

service CustomerServiceGrpc {
  rpc find (commons.Query) returns (FindCustomersPayload) {}
  rpc findById (commons.Id) returns (Customer) {}
  rpc findOne (commons.Query) returns (Customer) {}
  rpc count (commons.Query) returns (commons.Count) {}
  rpc create (CreateCustomerInput) returns (Customer) {}
  rpc update (UpdateCustomerInput) returns (Customer) {}
  rpc destroy (commons.Query) returns (commons.Count) {}
}
